--- a/GS/css/estiloXL.css
+++ b/GS/css/estiloXL.css
@@ -344,4 +344,35 @@
         font-size: 16px; /* Tamanho da fonte */
         margin-left: 0px;
     }
+    
+    .formaPagamento {
+        width: 400px;
+        height: 100px;
+        background-color: #e0e0e0;
+        border-radius: 20px;
+        margin-top: 30px;
+        line-height: 100px;
+    }
+    
+    .tipoPagamento {
+        font-size: 18px 
+    }
+
+    .empresas {
+        margin-top: 20px;
+        width: 800px;
+    }
+    
+    .empresa1, .empresa2, .empresa3 {
+        margin: 0 10px; /* Adiciona um pequeno espaço entre as empresas */
+    }
+    
+    .empresas img {
+        width: 200px;
+        margin-top: 25px;
+    }
+    
+    #tituloEmpresasParceiras{
+        margin-top: 30px;
+    }
 }
