--- a/GS/css/estilo.css
+++ b/GS/css/estilo.css
@@ -1005,5 +1005,11 @@ h4 {
 
 #infoEmpresaSap {
     width: 900px;
-    margin-top: 20px;
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+
+.LogoDaSap{
+    float: right;
+    width: 220px;
 }
