--- a/GS/css/estiloXL.css
+++ b/GS/css/estiloXL.css
@@ -375,4 +375,41 @@
     #tituloEmpresasParceiras{
         margin-top: 30px;
     }
+
+    #infoEmpresaSap {
+        width: 900px;
+        margin-top: 30px;
+        margin-bottom: 30px;
+    }
+    
+    .LogoDaSap{
+        float: right;
+        width: 220px;
+        margin-top: 10px;
+        margin-right: 20px;
+    }
+    
+    #infoEmpresaFIA {
+        width: 900px;
+        margin-top: 30px;
+        margin-bottom: 30px;
+    }
+
+    #infoEmpresaUltragaz {
+        width: 900px;
+        margin-top: 30px;
+        margin-bottom: 30px;
+    }
+    
+    .LogoDaFIA {
+        float: right;
+        width: 200px;
+        margin-right: 50px;
+    }
+    
+    .LogoDaUltragaz {
+        float: right;
+        width: 200px;
+        margin-right: 30px;
+    }
 }
