--- a/GS/css/estiloMD.css
+++ b/GS/css/estiloMD.css
@@ -462,4 +462,8 @@
         margin-right: 30px;
         margin-bottom: 20px;
     }
+
+    #txtCNPJ, #txtCPF, #txtTelefone, #txtSenha, #txtConfSenha {
+        width: 253px !important;
+    }
 }
