--- a/GS/css/estiloMD.css
+++ b/GS/css/estiloMD.css
@@ -471,6 +471,7 @@
         width: 180px;
         margin-top: 10px;
         margin-left: 108px;
+        margin-bottom: 30px;
     }
     
     #informacoesBarbara{
